saves/test/demo_full_20240802_193545/alwaysblock1/debug_1/run_info.txt
iverilog simulation failed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp alwaysblock1_tb.v alwaysblock1.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:

iverilog cmd 2 error:
program is timeout (time > 5s). please check your code. Hints: there might be some infinite loop, please check all the loops in your programm. If it is a verilog code, please check if there is a $finish in the code.
